Cross-Browser compatibility for Navbar, Updated Footer, Updated Blog

--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
                         <a class="nav-link" data-toggle="tab" href="#blogInvest" role="tab">Investment Series</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#comic" role="tab">Comic</a>
+                        <a class="nav-link" data-toggle="tab" href="#comic" role="tab">Comics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#blogVids" role="tab">Videos</a>
@@ -295,10 +295,10 @@
                             and managing your time. Developing your motivation and concentration skills will help you to overcome
                             the lure of procrastination.</p>
                         <span>
-                                <img src="images/facebook.png">
-                                <img src="images/instagram.png">
-                                <img src="images/twitter.png">
-                            </span>
+                            <img src="images/facebook.png">
+                            <img src="images/instagram.png">
+                            <img src="images/twitter.png">
+                        </span>
                         <span class="float-right link">&rarr; <a href="#">Read More</a></span>
                     </div>
                 </div>
@@ -370,10 +370,10 @@
                             and managing your time. Developing your motivation and concentration skills will help you to overcome
                             the lure of procrastination.</p>
                         <span>
-                                <img src="images/facebook.png">
-                                <img src="images/instagram.png">
-                                <img src="images/twitter.png">
-                            </span>
+                                    <img src="images/facebook.png">
+                                    <img src="images/instagram.png">
+                                    <img src="images/twitter.png">
+                                </span>
                         <span class="float-right link">&rarr; <a href="#">Read More</a></span>
                     </div>
                 </div>
@@ -445,10 +445,10 @@
                             and managing your time. Developing your motivation and concentration skills will help you to overcome
                             the lure of procrastination.</p>
                         <span>
-                                <img src="images/facebook.png">
-                                <img src="images/instagram.png">
-                                <img src="images/twitter.png">
-                            </span>
+                                    <img src="images/facebook.png">
+                                    <img src="images/instagram.png">
+                                    <img src="images/twitter.png">
+                                </span>
                         <span class="float-right link">&rarr; <a href="#">Read More</a></span>
                     </div>
                 </div>
@@ -520,10 +520,10 @@
                             and managing your time. Developing your motivation and concentration skills will help you to overcome
                             the lure of procrastination.</p>
                         <span>
-                                <img src="images/facebook.png">
-                                <img src="images/instagram.png">
-                                <img src="images/twitter.png">
-                            </span>
+                                    <img src="images/facebook.png">
+                                    <img src="images/instagram.png">
+                                    <img src="images/twitter.png">
+                                </span>
                         <span class="float-right link">&rarr; <a href="#">Read More</a></span>
                     </div>
                 </div>
@@ -592,6 +592,7 @@
             <div class="col-md-4 sm-plug"></div>
         </div>
     </div>
+    <!-- Footer for Blog Page -->
     <footer class="container" id="blog-Ft">
         <div class="row">
             <div class="col-12 col-md-4 align-self-center text-center text-md-left">
@@ -639,6 +640,8 @@
             if (size <= 991) {
                 $(".container").attr("class", "container-fluid");
             }
+
+            $('#blogTab a[href="'+ window.location.hash+ '"]').tab('show'); // Select tab by name if provided in location hash
 
             $("#m-blogTab").change(function (){
                 var i = $(this).val();
