--- a/benefits.html
+++ b/benefits.html
@@ -26,18 +26,18 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-    
-        <!-- google analytics tracking snippet --> 
+
+    <!-- google analytics tracking snippet -->
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-105192236-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-105192236-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -195,7 +195,7 @@
                     <h1 class="hidden-md-down">Why not give<br><span>#thefutureyou</span> a gift?</h1>
                     <h2 class="hidden-lg-up">Why not give<br><span>#thefutureyou</span> a gift?</h2>
                     <p>With our flexible and easy to understand benefits structure, you are guaranteed a "Thank you" note from
-                    the future you!</p>
+                        the future you!</p>
                     <a href="enroll.html" class="btn btn-outline-white">Enroll now</a>
                 </div>
             </div>
@@ -379,6 +379,9 @@
                                 <a class="nav-link" data-toggle="tab" href="#frgn2" role="tab">Foreigner</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#temporal" role="tab">Temporal</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#nst2" role="tab">NSITF</a>
                             </li>
                             <li class="nav-item">
@@ -403,8 +406,13 @@
                             <li>Age Declaration/Birth Certificate.</li>
                             <li>Passport photographs(2).</li>
                             <li>Bank Account Details (Banker’s Confirmation/Statement of Account/Copy of Cheque leaf).</li>
+                            <li>Duly completed Application Form</li>
                         </ul>
-                        To apply, please download the application form here
+                        <p>To apply, please download the application form below:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/PRIVATE%20ABOVE%20AGE%2050%20APPLICATION%20FORM.PDF" target="_blank">Private Sector Application Form</a></li>
+                            <li><a href="document/PUBLIC%20SECTOR%20APPLICATION%20FORM%20-%20-.pdf" target="_blank">Public Sector Application Form</a></li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="enbloc" role="tabpanel">
                         <p>The documents required to be provided (for customers from different sectors) are shown below:</p>
@@ -414,8 +422,13 @@
                             <li>Age Declaration / Birth Certificate.</li>
                             <li>Passport photographs(2).</li>
                             <li>Bank Account (Banker’s Confirmation/Statement of Account/Copy of Cheque leaf)</li>
+                            <li>Duly completed Application Form</li>
                         </ul>
-                        To apply, please download the application form here
+                        <p>To apply, please download the application form below:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/PRIVATE%20ABOVE%20AGE%2050%20APPLICATION%20FORM.PDF" target="_blank">Private Sector Application Form</a></li>
+                            <li><a href="document/PUBLIC%20SECTOR%20APPLICATION%20FORM%20-%20-.pdf" target="_blank">Public Sector Application Form</a></li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="med-grnd2" role="tabpanel">
                         <p>The document required to be provided is shown below:</p>
@@ -427,10 +440,15 @@
                             <li>Age Declaration/Birth Certificate.</li>
                             <li>Passport photographs(2).</li>
                             <li>Bank Account Details (Banker’s Confirmation/Statement of Account/Copy of Cheque leaf).</li>
+                            <li>Duly completed Application Form</li>
+                        </ul>
+                        <p>To apply, please download the application form below:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/MEDICAL%20GROUNDS%20APPLICATION%20FORM--.pdf" target="_blank">Medical Grounds Application Form</a></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="dth-ben2" role="tabpanel">
-                        <p>The documents required to be provided (for customers from different sectors) are shown below:</p>
+                        <p>The documents required to be provided (for clients from different sectors) are shown below:</p>
                         <ul>
                             <li>Certified True of Letter of Administration or Will admitted to Probate.</li>
                             <li>Passport Picture of the deceased and Next Of Kin (2 each).</li>
@@ -449,7 +467,18 @@
                             <li>Drivers’ Licence.</li>
                             <li>Notary Public of Identity.</li>
                         </ul>
-                        To apply, please download the application form here:
+                        <p>For missing Employee’s benefit, the following are additional requirements to be submitted along with the
+                        list stated above (with the exception of Death certificate):</p>
+                        <ul>
+                            <li>Police report.</li>
+                            <li>Newspaper publication.</li>
+                            <li>Letter from ex-employer confirming that the employee has been missing and details.</li>
+                        </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/PRIVATE-%20DEATH%20BENEFIT%20APPLICATION%20FORM%20--.pdf" target="_blank">Private Sector Application Form</a></li>
+                            <li><a href="document/PUBLIC-%20DEATH%20BENEFIT%20APPLICATION%20FORM%20--.pdf" target="_blank">Public Sector Application Form</a></li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="frgn2" role="tabpanel">
                         <p>The document required to be provided is shown below:</p>
@@ -462,29 +491,63 @@
                             <li>Age declaration/birth certificate</li>
                             <li>Copy of valid international passport</li>
                         </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/FOREIGNER%20APPLICATION%20FORM--.pdf" target="_blank">Foreigner Application Form</a></li>
+                        </ul>
+                    </div>
+                    <div class="tab-pane fade col-md-9" id="temporal" role="tabpanel">
+                        <p>The document required to be provided is shown below:</p>
+                        <ul>
+                            <li>Official notice of retirement from employer.</li>
+                            <li>Letter from ex-employer confirming status of outstanding remittance (Accrued Pension Right)/ Retirement benefit registration slip (public sector).</li>
+                            <li>Age Declaration/Birth Certificate.</li>
+                            <li>Passport photograph(1).</li>
+                            <li>Bank Account Details (Banker’s Confirmation/Statement of Account/Copy of Cheque leaf).</li>
+                            <li>Duly completed Application Form.</li>
+                        </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/25LUMPSUM.pdf" target="_blank">Temporal Application Form</a></li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="nst2" role="tabpanel">
                         <p>The document required to be provided is shown below:</p>
                         <ul>
-                            <li>Passport photographs(1)</li>
+                            <li>Passport photographs(1).</li>
                             <li>Bank Account Details (Banker’s Confirmation/Statement of Account/Copy of Cheque leaf)</li>
                             <li>Application letter requesting for the payment of the transferred NSITF funds.</li>
+                            <li>Duly completed Application Form.</li>
+                        </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/NSITF%20APPLICATION%20FORM--.pdf" target="_blank">NSITF Application Form</a></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="leg-app" role="tabpanel">
                         <p>The document required to be provided is shown below:</p>
                         <ul>
-                            <li>Separation Letter</li>
-                            <li>Confirmation of Pre-Act by Employer</li>
-                            <li>Handwritten application letter</li>
+                            <li>Separation Letter.</li>
+                            <li>Confirmation of Pre-Act by Employer.</li>
+                            <li>Handwritten application letter.</li>
+                            <li>Duly completed Application Form.</li>
+                        </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/LEGACY%20APPLICATION%20FORM--.pdf" target="_blank">Legacy Application Form</a></li>
                         </ul>
                     </div>
                     <div class="tab-pane fade col-md-9" id="avc-app" role="tabpanel">
                         <p>The document required to be provided is shown below:</p>
                         <ul>
-                            <li>Handwritten Application letter</li>
-                            <li>Passport photographs (1)</li>
-                            <li>Document validating bank details</li>
+                            <li>Handwritten Application letter.</li>
+                            <li>Passport photographs(1).</li>
+                            <li>Document validating bank details.</li>
+                            <li>Duly completed Application Form.</li>
+                        </ul>
+                        <p>To apply, please download the application form here:</p>
+                        <ul class="ben-downld">
+                            <li><a href="document/AVC%20APPLICATION%20FORM--.pdf" target="_blank">AVC Application Form</a></li>
                         </ul>
                     </div>
                 </div>
@@ -524,22 +587,31 @@
         <div class="row justify-content-around" style="margin-bottom: 10px">
             <div class="col-sm-10 col-md-4 collapse" id="sign">
                 <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup" class="text-center">
-                    <form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=c1b945e29f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll" class="text-center">
-                            <h5 style="color:#1d69a6"> Subscribe and receive the Leading digest monthly! </h5>
+                <div id="mc_embed_signup">
+                    <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                        <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                        <input type="hidden" name="id" value="c1b945e29f">
+                        <div id="mc_embed_signup_scroll">
+                            <h2>Subscribe to our mailing list</h2>
                             <div class="mc-field-group">
-                                <input type="text" value="" name="FNAME" class="required chimp text-center" id="mce-FNAME" placeholder="First Name">
+                                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                                </label>
+                                <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" class="chimp">
                             </div>
                             <div class="mc-field-group">
-                                <input type="email" value="" name="EMAIL" class="required email chimp text-center" id="mce-EMAIL" placeholder="E-mail Address">
+                                <label for="mce-FNAME">First Name </label>
+                                <input type="text" name="MERGE1" id="MERGE1" size="25" value="" class="chimp">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name </label>
+                                <input type="text" name="MERGE2" id="MERGE2" size="25" value="" class="chimp">
                             </div>
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" value="Subscribe Today" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm news-button"></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                         </div>
                     </form>
                 </div>
@@ -547,9 +619,12 @@
             </div>
             <div class="col-sm-10 col-md-4 collapse" id="feed">
                 <h5 class="text-center"> We'd love to hear from you </h5>
-                <form>
+                <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                    <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                    <input type="hidden" name="id" value="acab34fb55">
+
                     <div class="form-group">
-                        <input class="form-control form-control-sm chimp text-center" type="text" placeholder="E-mail Address" required>
+                        <input class="form-control form-control-sm chimp text-center" type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" placeholder="Email Address">
                     </div>
                     <div class="form-group">
                         <textarea class="form-control form-control-sm chimp text-center" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
@@ -572,7 +647,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <h6>Quick Links</h6>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="#">Blog</a>
+                    <a class="nav-link active" href="blog.html">Blog</a>
                     <a class="nav-link" href="enroll.html">Enroll Now</a>
                     <a class="nav-link" href="benefits.html">Benefits</a>
                     <a class="nav-link" href="investment.html">Our Philosophy</a>
@@ -581,7 +656,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 app">
                 <h6>Our Mobile App</h6>
-                <img src="images/hand.png" alt="">
+                <img src="images/hand.png" alt="Leadway Pensure Mobile App">
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h6> Our Game Board</h6>
@@ -634,7 +709,7 @@
             <div class="col-12 col-md-4 align-self-center text-center">Web Design & Digital by iNspire</div>
         </div>
         <a id="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-        <a id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
+        <a href="javascript:window.print()" id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
         <a href="javascript:" id="back-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
