--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,17 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-        <!-- google analytics tracking snippet --> 
+    <!-- google analytics tracking snippet -->
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-105192236-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-105192236-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -207,9 +207,9 @@
                 <h2 class="hidden-md-down">Head Office</h2>
                 <h4 class="hidden-lg-up">Head Office</h4>
                 <p>Leadway Pensure PFA Limited<br>
-                121/123 Funsho Williams Avenue<br>
-                Surulere, Lagos.<br>
-                Nigeria.</p>
+                    121/123 Funsho Williams Avenue<br>
+                    Surulere, Lagos.<br>
+                    Nigeria.</p>
                 <i class="fa fa-phone" aria-hidden="true"></i> 01-2800850, 01-2800800
             </div>
         </div>
@@ -1219,32 +1219,44 @@
         <div class="row justify-content-around" style="margin-bottom: 10px">
             <div class="col-sm-10 col-md-4 collapse" id="sign">
                 <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup" class="text-center">
-                    <form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=c1b945e29f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll" class="text-center">
-                            <h4 style="color:#1d69a6"> Subscribe and receive the Leading digest monthly! </h4>
+                <div id="mc_embed_signup">
+                    <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                        <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                        <input type="hidden" name="id" value="c1b945e29f">
+                        <div id="mc_embed_signup_scroll">
+                            <h2>Subscribe to our mailing list</h2>
                             <div class="mc-field-group">
-                                <input type="text" value="" name="FNAME" class="required chimp text-center" id="mce-FNAME" placeholder="First Name">
+                                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                                </label>
+                                <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" class="chimp">
                             </div>
                             <div class="mc-field-group">
-                                <input type="email" value="" name="EMAIL" class="required email chimp text-center" id="mce-EMAIL" placeholder="E-mail Address">
+                                <label for="mce-FNAME">First Name </label>
+                                <input type="text" name="MERGE1" id="MERGE1" size="25" value="" class="chimp">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name </label>
+                                <input type="text" name="MERGE2" id="MERGE2" size="25" value="" class="chimp">
                             </div>
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" value="Subscribe Today" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm news-button"></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                         </div>
                     </form>
                 </div>
                 <!--End mc_embed_signup-->
             </div>
             <div class="col-sm-10 col-md-4 collapse" id="feed">
-                <h4 class="text-center"> We'd love to hear from you </h4>
-                <form>
+                <h5 class="text-center"> We'd love to hear from you </h5>
+                <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                    <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                    <input type="hidden" name="id" value="acab34fb55">
+
                     <div class="form-group">
-                        <input class="form-control form-control-sm chimp text-center" type="text" placeholder="E-mail Address" required>
+                        <input class="form-control form-control-sm chimp text-center" type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" placeholder="Email Address">
                     </div>
                     <div class="form-group">
                         <textarea class="form-control form-control-sm chimp text-center" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
@@ -1267,7 +1279,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <h6>Quick Links</h6>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="#">Blog</a>
+                    <a class="nav-link active" href="blog.html">Blog</a>
                     <a class="nav-link" href="enroll.html">Enroll Now</a>
                     <a class="nav-link" href="benefits.html">Benefits</a>
                     <a class="nav-link" href="investment.html">Our Philosophy</a>
@@ -1276,7 +1288,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 app">
                 <h6>Our Mobile App</h6>
-                <img src="images/hand.png" alt="">
+                <img src="images/hand.png" alt="Leadway Pensure Mobile App">
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h6> Our Game Board</h6>
@@ -1329,7 +1341,7 @@
             <div class="col-12 col-md-4 align-self-center text-center">Web Design & Digital by iNspire</div>
         </div>
         <a id="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-        <a id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
+        <a href="javascript:window.print()" id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
         <a href="javascript:" id="back-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
