fixing enrollment portal diaply blog

--- a/enroll.html
+++ b/enroll.html
@@ -504,7 +504,7 @@
 
             </div>
             <div class="row p-form"  id="employer-form">
-                <div class="col-12 field-text f-width">
+                <div class="col-12 field-text">
                     <!-- line 1 start -->
                     <div class="row">
                         <div class= "form-group col-12 col-sm-6 col-md-4 text-center">
@@ -702,7 +702,7 @@
 
             </div>
             <div class="row p-form"  id="kin-form">
-                <div class="col-12 field-text f-width">
+                <div class="col-12 field-text">
                     <!-- line 1 start -->
                     <div class="row">
                         <div class= "form-group col-12 col-sm-6 col-md-4 text-center">
@@ -858,7 +858,7 @@
 
             </div>
             <div class="row p-form" style="height:324px" id="biometrics-form">
-                <div class="col-12 field-text f-width">
+                <div class="col-12 field-text">
                     <!-- line 1 start -->
                     <div class="row">
                         <div class= "col-12 text-center">
