fixing enrollment portal display bug and blog updates

--- a/blog.html
+++ b/blog.html
@@ -608,11 +608,14 @@
             <div class="col-md-6">
              <div class=social-feed id=instafeed > </div>
             </div>
-            <div class="col-md-6 sm-plug">
+            <div class="col-md-6" id=twitfeed>
+              <a class="twitter-grid" data-lang="en" data-limit="9" data-partner="tweetdeck" href="https://twitter.com/OAOD_iNspire/timelines/894512301486870529">leadway test </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 
             </div>
-             <div class="col-md-6 sm-plug">
-                
+             <div class="col-md-6">
+                 <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+                    <script type="IN/FollowCompany" data-id="7110418" data-counter="top"></script>
+                    <script type="IN/CompanyProfile" data-id="7110418" data-format="inline" data-related="false"></script>
             </div>
 
         </div>
