--- a/career.html
+++ b/career.html
@@ -18,9 +18,9 @@
     <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
     </style>
     <script>
         (function(h,o,t,j,a,r){
@@ -32,23 +32,23 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-    
-        <!-- google analytics tracking snippet --> 
+
+    <!-- google analytics tracking snippet -->
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-105192236-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-105192236-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>
-    (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+        (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
     </script>
-<!--End mc_embed_signup-->
+    <!--End mc_embed_signup-->
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -208,10 +208,10 @@
                         <h3 class="hidden-md-up">Careers</h3>
                     </div>
                     <p>Many employment websites are designed to allow employers to post job requirements for a position to be filled
-                    and are commonly known as job boards. Other employment sites offer employer reviews, career and job-search advice,
-                    and describe different job descriptions or employers.<span class="hidden-sm-down">Through a job website a prospective
-                    employee can locate and fill a job application or submit resumes over the Internet for the advertised position.</span><br>
-                    <a href="javascript:" class="btn btn-outline-white" id="submitCV">Submit CV</a></p>
+                        and are commonly known as job boards. Other employment sites offer employer reviews, career and job-search advice,
+                        and describe different job descriptions or employers.<span class="hidden-sm-down">Through a job website a prospective
+                        employee can locate and fill a job application or submit resumes over the Internet for the advertised position.</span><br>
+                        <a href="javascript:" class="btn btn-outline-white" id="submitCV">Submit CV</a></p>
                 </div>
             </div>
         </div>
@@ -261,9 +261,9 @@
                                     <div class="card-block">
                                         <h6>Role Summary</h6>
                                         <p>We are looking for an experienced Brand Manager who is passionate about uncovering consumer insights
-                                        and delivering innovative marketing campaigns. You will join a dynamic and fast-paced environment and
-                                        you will generate strategies that grow market share and brand’s reputation, improve customer experience
-                                        and drive growth.</p>
+                                            and delivering innovative marketing campaigns. You will join a dynamic and fast-paced environment and
+                                            you will generate strategies that grow market share and brand’s reputation, improve customer experience
+                                            and drive growth.</p>
                                         <a type="button" class="btn btn-outline-loc">Requirements</a>
                                     </div>
                                 </div>
@@ -280,7 +280,7 @@
                                     <div class="card-block">
                                         <h6 class="text-center">Role Summary</h6>
                                         <p>To gather and analyze research data, top level strategizing, planning, forecasting and simulations.
-                                        Helps in allocating resources, measure performance from large data base for investment purposes.</p>
+                                            Helps in allocating resources, measure performance from large data base for investment purposes.</p>
                                         <a type="button" class="btn btn-outline-loc">Requirements</a>
                                     </div>
                                 </div>
@@ -297,7 +297,7 @@
                                     <div class="card-block">
                                         <h6>Role Summary</h6>
                                         <p>To coordinate and synchronize the activities of the sales unit in house and the agents (foot soldiers)
-                                        to ensure maximization of human and material resources.</p>
+                                            to ensure maximization of human and material resources.</p>
                                         <a type="button" class="btn btn-outline-loc">Requirements</a>
                                     </div>
                                 </div>
@@ -314,8 +314,8 @@
                                     <div class="card-block">
                                         <h6>Role Summary</h6>
                                         <p>We are looking for an individual whose primary function is to deeply examine the bonds and T-Bills market,
-                                        trading on both securities, providing research and valuation report on the composition of the bond portfolio
-                                        to make buy/hold and sell decision thereby minimizing cost and maximizing profit.</p>
+                                            trading on both securities, providing research and valuation report on the composition of the bond portfolio
+                                            to make buy/hold and sell decision thereby minimizing cost and maximizing profit.</p>
                                         <a type="button" class="btn btn-outline-loc">Requirements</a>
                                     </div>
                                 </div>
@@ -348,7 +348,7 @@
                                     <div class="card-block">
                                         <h6>Role Summary</h6>
                                         <p>To co-ordinate and amange the entire legal framework of LPPFA particularly the review of policies,
-                                        procedures, manuals, contracts and any other legal documentation.</p>
+                                            procedures, manuals, contracts and any other legal documentation.</p>
                                         <a type="button" class="btn btn-outline-loc">Requirements</a>
                                     </div>
                                 </div>
@@ -364,7 +364,7 @@
                                 <!-- Begin MailChimp Signup Form -->
                                 <div id="mc_embed_signup" class="news-bg text-center">
                                     <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="post">
-                                       <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                                        <input type="hidden" name="u" value="a7d286c921166498a0b699255">
                                         <input type="hidden" name="id" value="47a1abe4d1">
                                         <div id="mc_embed_signup_scroll">
                                             <div class="mc-field-group text-center">
@@ -403,7 +403,7 @@
                         <div class="row">
                             <div class="col-sm-6 col-md-4 cult-box1">
                                 <p class="v-align">Our people are at the core of our success, hence the attention to ensuring both mental and
-                                physical fitness of our team all the time.<br> <a href="#" class="btn btn-outline-white-sm">Learn more</a></p>
+                                    physical fitness of our team all the time.<br> <a href="#" class="btn btn-outline-white-sm">Learn more</a></p>
                             </div>
                             <div class="col-sm-6 col-md-4 cult-box2">
                                 <h3 class="v-align">Hangouts & Retreats</h3>
@@ -419,7 +419,7 @@
                             </div>
                             <div class="col-sm-6 col-md-4 cult-box6">
                                 <p class="v-align">Head over now to our blog section for tips on how to assemble your CV and other relevant
-                                documents<br><a href="#" class="btn btn-outline-white-sm">Learn more</a></p>
+                                    documents<br><a href="#" class="btn btn-outline-white-sm">Learn more</a></p>
                             </div>
                         </div>
                     </div>
@@ -1728,22 +1728,31 @@
         <div class="row justify-content-around" style="margin-bottom: 10px">
             <div class="col-sm-10 col-md-4 collapse" id="sign">
                 <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup" class="text-center">
-                    <form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=c1b945e29f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll" class="text-center">
-                            <h5 style="color:#1d69a6"> Subscribe and receive the Leading digest monthly! </h5>
+                <div id="mc_embed_signup">
+                    <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                        <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                        <input type="hidden" name="id" value="c1b945e29f">
+                        <div id="mc_embed_signup_scroll">
+                            <h2>Subscribe to our mailing list</h2>
                             <div class="mc-field-group">
-                                <input type="text" value="" name="FNAME" class="required chimp text-center" id="mce-FNAME" placeholder="First Name">
+                                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                                </label>
+                                <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" class="chimp">
                             </div>
                             <div class="mc-field-group">
-                                <input type="email" value="" name="EMAIL" class="required email chimp text-center" id="mce-EMAIL" placeholder="E-mail Address">
+                                <label for="mce-FNAME">First Name </label>
+                                <input type="text" name="MERGE1" id="MERGE1" size="25" value="" class="chimp">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name </label>
+                                <input type="text" name="MERGE2" id="MERGE2" size="25" value="" class="chimp">
                             </div>
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
-                            <div class="clear"><input type="submit" value="Subscribe Today" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm news-button"></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                         </div>
                     </form>
                 </div>
@@ -1751,9 +1760,12 @@
             </div>
             <div class="col-sm-10 col-md-4 collapse" id="feed">
                 <h5 class="text-center"> We'd love to hear from you </h5>
-                <form>
+                <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
+                    <input type="hidden" name="u" value="a7d286c921166498a0b699255">
+                    <input type="hidden" name="id" value="acab34fb55">
+
                     <div class="form-group">
-                        <input class="form-control form-control-sm chimp text-center" type="text" placeholder="E-mail Address" required>
+                        <input class="form-control form-control-sm chimp text-center" type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" placeholder="Email Address">
                     </div>
                     <div class="form-group">
                         <textarea class="form-control form-control-sm chimp text-center" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
@@ -1776,7 +1788,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <h6>Quick Links</h6>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="#">Blog</a>
+                    <a class="nav-link active" href="blog.html">Blog</a>
                     <a class="nav-link" href="enroll.html">Enroll Now</a>
                     <a class="nav-link" href="benefits.html">Benefits</a>
                     <a class="nav-link" href="investment.html">Our Philosophy</a>
@@ -1785,7 +1797,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 app">
                 <h6>Our Mobile App</h6>
-                <img src="images/hand.png" alt="">
+                <img src="images/hand.png" alt="Leadway Pensure Mobile App">
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h6> Our Game Board</h6>
@@ -1838,7 +1850,7 @@
             <div class="col-12 col-md-4 align-self-center text-center">Web Design & Digital by iNspire</div>
         </div>
         <a id="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-        <a id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
+        <a href="javascript:window.print()" id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
         <a href="javascript:" id="back-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
