Safari V9 and IE10 compability complete

--- a/benefits.html
+++ b/benefits.html
@@ -204,7 +204,7 @@
             <div class="col-md-12 benefits-tab">
                 <ul class="hidden-sm-down nav nav-fill nav-tabs" id="benefitsTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#ab-ret" role="tab"><img src="images/about-retire.png"/> About to retire?</a>
+                        <a class="nav-link active" data-toggle="tab" href="#ab-ret" role="tab"><img src="images/about-retire.png"/> About to Retire?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#pay-grnd" role="tab"><img src="images/pay-grounds.png"/> Grounds for Retirement</a>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="tab-content row">
                     <div class="col-md-3 text-center">
-                        <img class="v-align" src="images/retire-tips.png" alt="retirement tips">
+                        <img src="images/retire-tips.png" alt="retirement tips">
                     </div>
                     <div class="tab-pane fade show active col-md-9" id="gen-app" role="tabpanel">
                         <p>An employee may access his/her RSA when he/she ceases to make further contributions into the RSA as a result
@@ -325,7 +325,7 @@
                 </div>
                 <div class="tab-content row">
                     <div class="col-md-3 text-center">
-                        <img class="v-align" src="images/retire-grnds.png" alt="retirement grounds"/>
+                        <img src="images/retire-grnds.png" alt="retirement grounds"/>
                     </div>
                     <div class="tab-pane fade show active col-md-9" id="man-ret" role="tabpanel">
                         <p>This ground for withdrawal is specifically for employees who disengage from employment upon attaining the
@@ -395,7 +395,7 @@
                 </div>
                 <div class="tab-content row">
                     <div class="col-md-3 text-center">
-                        <img class="v-align" src="images/pay-type.png" height="200" width="200"/>
+                        <img src="images/pay-type.png" height="200" width="200"/>
                     </div>
                     <div class="tab-pane fade show active col-md-9" id="l-sum" role="tabpanel">
                         <p>The documents required to be provided (for customers from different sectors) are shown below:</p>
