--- a/company.html
+++ b/company.html
@@ -251,7 +251,7 @@
                     <div class="vr hidden-sm-down"></div>
                     <div class="col-md-6">
                         <h2 class="hidden-sm-down text-center">Mission Statement</h2>
-                        <h3 class="hidden-md-up text-center">Mission Statement</h3>
+                        <h4 class="hidden-md-up text-center">Mission Statement</h4>
                         <p>To passionately deliver unrivalled pension services and financial comfort to our clients.<br>
                             We are a unique PFA, focused on the future security of the citizens of our great nation. We are
                             passionate and energetic, evolving from a vision and commitment to the welfare and comfort of the
@@ -271,7 +271,7 @@
                     </div>
                     <div class="col-md-6 text-center">
                         <h2 class="hidden-sm-down">Explore our Values</h2>
-                        <h3 class="hidden-md-up" style="margin-top: 30px">Explore our Values</h3>
+                        <h4 class="hidden-md-up" style="margin-top: 30px">Explore our Values</h4>
                         <p class="text-left">Our very strong background and pedigree also carries a history of integrity and trust, which is critical to
                             the successful delivery of our business. We will not compromise on these:</p>
                         <div id="accordion6" role="tablist" aria-multiselectable="true">
@@ -1030,7 +1030,7 @@
             </div>
             <div class="tab-pane fade col-12" role="tabpanel" id="f-rep">
                 <div class="row">
-                    <div class="col-12 col-md-6" style="padding-left: calc(10% - 15px)">
+                    <div class="col-12 col-md-6">
                         <h2>Reports</h2>
                         <p>Download and review our fund performance over the years</p>
                         <ul>
