--- a/investment.html
+++ b/investment.html
@@ -38,7 +38,7 @@
 
 </script>
 </head>
-<body>
+<body style="overflow-x: hidden">
     <!-- Mobile navigation -->
     <nav class="m-style navbar fixed-top hidden-lg-up">
         <div class="button_container" id="toggle">
@@ -212,21 +212,20 @@
                 </div>
             </div>
             <div class="col-md-5 multi-fund">
-                <div class="multi-fund-txt v-align">
-                    <div class="text-center">
-                        <img class="img-fluid" src="images/invest-piggy.png">
-                    </div>
+                <div class="v-align">
                     <h2>Multi-fund...</h2>
                     <p>A portfolio that reflects you.</p>
-                    <p style="font-weight: 300">Diversify your investment portfolio through our flexible multi-fund structure.
-                    Speak to our investment representative to find out more.</p>
+                    <p style="font-weight: 300">The Multi-fund structure is a framework designed to align the retirement savings of contributors to their risk
+                    appetite by maintaining four Funds with distinctly different tolerance for risk. The aggressive fund (Fund I) would
+                    have a much higher allocation to variable income instrument than Fund II. Similarly, Fund II’s allocation will be
+                    higher than Fund III’s allocation. Fund IV, the retiree Fund will have the lowest allocation to variable income securities.</p>
                     <div class="text-center"><a href="contact.html" class="btn btn-outline-white">Contact us</a></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-5 invest-rep">
-                <div class="invest-rep-txt v-align">
+                <div class="v-align">
                     <h2>Reports</h2>
                     <p>Download and review our fund performance over the years</p>
                     <ul>
@@ -247,7 +246,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" style="overflow-x: hidden">
         <div class="row">
             <div class="col-12 know text-center">
                 <h1 class="hidden-sm-down" data-aos="fade">Knowledge Center</h1>
