--- a/services.html
+++ b/services.html
@@ -300,14 +300,11 @@
                 periods imposed by some schemes. Quite a number of schemes also do not allow for transfer of rights to countries they do
                 not have cross-border arrangement with.</p>
                 <p>One key objective of the guidelines on cross-border arrangement (CBA) is to seek to encourage the participation of Nigerians
-                abroad in the contributory pension scheme and assist them to save in Nigeria towards their old age and subsequent return.</p>
+                abroad in the contributory pension scheme and assist them to save in Nigeria towards their retirement and subsequent return.</p>
                 <p>The CBA shall involve the conditions and/or the set of guidelines under which Nigerian citizens serving in other countries
                 could participate in the Nigerian pension scheme. The CBA, therefore, makes provision for Nigerians in Diaspora, who may wish
                 to make voluntary contributions as provided in the Nigerian Pension Reform Act 2004.</p>
-                <p>The cross-border arrangement establishes a standard set of rules and procedures for foreign nationals and Nigerians resident
-                abroad to participate in the new contributory pension scheme. It also encourages participation of Nigerians abroad in the
-                contributory pension scheme and assists them to save in Nigeria towards their retirement and subsequent return.</p>
-                <p>Besides, it provides a platform to accommodate foreigners working in the country in the new scheme, thus guaranteeing a
+                <p>It provides a platform to accommodate foreigners working in the country in the new scheme, thus guaranteeing a
                 better retirement life for them. Any foreign employee of a company registered in Nigeria shall, at his/her discretion, join the
                 scheme, without considering whether or not he/she has a pension arrangement in his/her home country. The employee shall inform
                 his employer of his interest to join the scheme.</p>
