--- a/career.html
+++ b/career.html
@@ -1879,32 +1879,39 @@
     </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/index.js"></script>
     <script>
-        //Resize container based on desktop or mobile viewport.
-        var size = window.innerWidth;
-        if (size <= 991) {
-            $(".container").attr("class", "container-fluid");
-        }
-
-        $('#careerTab a[data-toggle="tab"]').on('shown.bs.tab', function() {
-            $('body,html').animate({
-                scrollTop : 480
-            }, 800);
-        });
-
-        $('#submitCV').click(function(){
-            $('a[href="#cv"]').tab('show');
-        });
-
-        $("#m-careerTab").change(function (){
-            var i = $(this).val();
-
-            if(i == 0){
-                $('a[href="#vac"]').tab('show');
-            }else if(i == 1){
-                $('a[href="#cv"]').tab('show');
-            }else if(i == 2) {
-                $('a[href="#alm"]').tab('show');
+        $(document).ready(function() {
+            //Resize container based on desktop or mobile viewport.
+            var size = window.innerWidth;
+            if (size <= 991) {
+                $(".container").attr("class", "container-fluid");
             }
+
+            $('#careerTab a[data-toggle="tab"]').on('shown.bs.tab', function () {
+                $('body,html').animate({
+                    scrollTop: 480
+                }, 800);
+            });
+
+            $('#submitCV').click(function () {
+                $('a[href="#cv"]').tab('show');
+            });
+
+            $("#m-careerTab").change(function () {
+                var i = $(this).val();
+
+                if (i == 0) {
+                    $('a[href="#vac"]').tab('show');
+                } else if (i == 1) {
+                    $('a[href="#cv"]').tab('show');
+                } else if (i == 2) {
+                    $('a[href="#alm"]').tab('show');
+                }
+            });
+
+            $('input[type="file"]').change(function (e) {
+                var fileName = e.target.files[0].name;
+                $('.custom-file-control').append(fileName);
+            });
         });
     </script>
 </body>
