Website optimization, Site Map and Regulatory Information page creation on lppfa

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <h6>Regulatory Requirements</h6>
                         <nav class="nav flex-column">
-                            <a class="nav-link active" href="#">Regulatory Information</a>
+                            <a class="nav-link active" href="Regulatory_Info.html">Regulatory Information</a>
                             <a class="nav-link" href="document/LegalPensionReformAct2014.pdf" target="_blank">Pension Reform Act</a>
                             <a class="nav-link" href="document/WhistleBlowingGuidelines.pdf" target="_blank"> Whistle Blowing</a>
                             <a class="nav-link" href="document/Code_of_Ethics_and_Business_Practices_for_Licensed_Operators.pdf" target="_blank">Code of Ethics and Conduct</a>
@@ -740,7 +740,7 @@
                     <div class="col-12">
                         <ul class="nav justify-content-center" style="margin-top: 15px">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Site Map</a>
+                                <a class="nav-link" href="siteMap.html">Site Map</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="privacy.html">Privacy Policy</a>
