pro-life updates

--- a/index.html
+++ b/index.html
@@ -756,9 +756,11 @@
                     <div class="col-12 col-md-4 align-self-center text-center">&copy; Leadway Pensure 2017</div>
                     <div class="col-12 col-md-4 align-self-center text-center">Web Design & Digital by iNspire</div>
                 </div>
-                <a id="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
+
                 <a href="javascript:window.print()" id="print"><i class="fa fa-print" aria-hidden="true"></i></a>
                 <a href="javascript:" id="back-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+                <a class="hidden-md-down" id="chat-icon"><img src="images/chat-icon.png"/></a>
+
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
